# quantag-python

./: LICENSE  README.md  pyproject.toml
quantag/: __init__.py
quantag/qaoa/: __init__.py  solver.py
quantag/vm/: __init__.py  backend.py
tests/: portfolio2.csv  test_qaoa.py  test_qaoa2.py  test_qimage.py  test_vm.py
tests/data/: portfolio.csv
